Refs #20390 Forum; fix wrapping in search user form
git-svn-id: https://svn.eionet.europa.eu/repositories/Naaya/trunk/eggs/naaya.groupware@21037 a0171fae-0946-0410-966d-b1775066cd26

--- a/naaya/groupware/skel/layout/groupware/eionet/gw_common.css
+++ b/naaya/groupware/skel/layout/groupware/eionet/gw_common.css
@@ -1442,7 +1442,7 @@ a.skiplink {
 */
 
 div#name_filter, .filters {
-	float: left;
+    display:inline-block;
 	margin: 0.5em 0.5em 0em 0em;
 }
 
